"Convert/export" panel title is now just "Export" when in small UI size, to prevent it wrapping to two lines.

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -4456,6 +4456,22 @@ div::-webkit-scrollbar-corner
 		pointer-events: none;
 	}
 
+.sizeSmall .hideInSizeSmall
+{
+	display: none;
+}
+
+.showInSizeSmall
+{
+	display: none;
+}
+
+.sizeSmall .showInSizeSmall
+{
+	display: initial;
+}
+
+
 /* Export Dialog */
 .activeExportDialog
 {
